--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <a href="https://www.linkedin.com/in/byronavila/" target="_blank" aria-label="LinkedIn">
                 <img src="img/linkedin-icon.png" alt="LinkedIn">
             </a>
-            <a href="https://github.com/tuusuario" target="_blank" aria-label="GitHub">
+            <a href="https://github.com/ByronAv412" target="_blank" aria-label="GitHub">
                 <img src="img/github-icon.png" alt="GitHub">
             </a>
         </div>
