--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Proyectos</h2>
         <div class="project">
             <h3>📈 Dashboard de Ventas</h3>
-            <img src="img/Dashboard_Performance.png" alt="Dashboard de Performance">
+            <img src="img/Dashboard_Performance.png" alt="Dashboard de Performance" class="blur-img">
             <p>Dashboard interactivo que permite visualizar y analizar el rendimiento de ventas y equipos de trabajo en tiempo real, facilitando la toma de decisiones estratégicas.</p>
             <!-- Herramientas utilizadas -->
             <p><strong>Herramientas utilizadas:</strong></p>
@@ -57,7 +57,7 @@
         </div>
         <div class="project">
             <h3>🏥 Dashboard sobre la educación en México</h3>
-            <img src="img/Dashboard_Educacion.png" alt="Dashboard de Educación">
+            <img src="img/Dashboard_Educacion.png" alt="Dashboard de Educación" class="blur-img">
             <p>Dashboard interactivo que permite analizar la calidad educativa en México, incluyendo tasas de deserción escolar y otros indicadores clave del sistema educativo.</p>
             <p><strong>Herramientas utilizadas:</strong></p>
             <ul class="tools-list">
