--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
 
     <section id="projects" class="projects">
         <h2>Proyectos</h2>
+         <div class="project">
+            <h3>🏥 Dashboard Financiero</h3>
+            <img src="img/Dashboard_Educacion.png" alt="Dashboard Financiero" class="blur-img">
+            <p>Dashboard realizado con un dataset financiero, en este se pueden visualizar datos, mejora y deuda pendiente. Útil para la toma de decisiones y estrategias futuras.</p>
+            <p><strong>Herramientas utilizadas:</strong></p>
+            <ul class="tools-list">
+                <li> Python <img src="img/python-icon.png" alt="Python Icon"></li>
+                <li> SQL <img src="img/sql-icon.png" alt="SQL Icon"></li>
+                <li> Power Bi <img src="img/powerbi-icon.png" alt="Power Bi Icon"></li>
+            </ul>
+            <a href="https://app.powerbi.com/groups/me/reports/d52d2178-1884-4c4a-957f-093433d4c0eb/b284678fdbd30aed02c2?experience=power-bi" target="_blank">Ver Dashboard</a>
+        </div>
         <div class="project">
             <h3>📈 Dashboard de Ventas</h3>
             <img src="img/Dashboard_Performance.png" alt="Dashboard de Performance" class="blur-img">
