--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Proyectos</h2>
          <div class="project">
             <h3>🏥 Dashboard Financiero</h3>
-            <img src="img/Dashboard_Educacion.png" alt="Dashboard Financiero" class="blur-img">
+            <img src="img/Dashboard_Financiero.png" alt="Dashboard Financiero" class="blur-img">
             <p>Dashboard realizado con un dataset financiero, en este se pueden visualizar datos, mejora y deuda pendiente. Útil para la toma de decisiones y estrategias futuras.</p>
             <p><strong>Herramientas utilizadas:</strong></p>
             <ul class="tools-list">
