--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portafolio de Alan Avila, analista de datos con experiencia en SQL, Power BI, Excel y Python. Explora mis proyectos y habilidades.">
-    <meta name="keywords" content="análisis de datos, SQL, Power BI, Excel, Python, portafolio, Alan Avila">
-    <title>Portafolio de Análisis de Datos</title>
+    <meta name="keywords" content="ciencai de datos, análisis de datos, SQL, Power BI, Excel, Python, portafolio, Alan Avila">
+    <title>Alan Avila | Data Analyst</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Portafolio de Análisis de Datos</h1>
+        <h1>Alan Avila - Portafolio</h1>
     </header>
 
     <nav>
